--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
+  loading_animation_widget: ^1.2.0+4
+  provider: ^6.0.5
+  path_provider: ^2.0.15
+  flutter_markdown: ^0.6.17
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/Cover.jpg
+    - README.md
   #  - images/logo_ndd.svg
   #   - images/a_dot_ham.jpeg
 
